--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "starvalley-food",
-  "version": "3.2.0",
+  "version": "3.4.2",
   "description": "Star Valley 구내식당 메뉴 CLI 도구 - Claude Code 기반 로컬 실행 버전",
   "type": "module",
   "main": "src/index.js",
@@ -16,12 +16,16 @@
   },
   "dependencies": {
     "chalk": "^5.3.0",
+    "clipboardy": "^4.0.0",
     "commander": "^11.1.0",
+    "node-fetch": "^3.3.2",
+    "ora": "^8.0.1"
+  },
+  "optionalDependencies": {
+    "@google/generative-ai": "^0.21.0",
     "dotenv": "^16.3.1",
     "jsdom": "^26.1.0",
-    "node-fetch": "^3.3.2",
     "openai": "^4.20.1",
-    "ora": "^8.0.1",
     "puppeteer": "^21.5.2"
   },
   "devDependencies": {
