--- a/.github/workflows/daily-menu.yml
+++ b/.github/workflows/daily-menu.yml
@@ -40,7 +40,9 @@ jobs:
             libxfixes3 \
             libxrandr2 \
             libgbm1 \
-            libasound2
+            libpango-1.0-0 \
+            libcairo2 \
+            libasound2t64
 
       - name: Run menu processor
         env:
