--- a/.github/workflows/daily-menu.yml
+++ b/.github/workflows/daily-menu.yml
@@ -7,6 +7,9 @@ on:
     - cron: '0 23 * * 1-4'
   workflow_dispatch: # 수동 실행 가능
 
+permissions:
+  contents: write
+
 jobs:
   update-menu:
     runs-on: ubuntu-latest
